--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header> 
     <nav>
       <ul style="list-style-type:none">
-        <li><a href="Index.html">Homepage</a></li>
+        <li><a href="index.html">Homepage</a></li>
         <li><a href="menu.html">Menu & Prices</a></li>
         <li><a href="events.html">Events & Activities</a></li>
       </ul>
@@ -55,7 +55,7 @@
     <nav>
       <img src="Images/logo.png" alt="logo" width="50%" height="auto">
       <ul style="list-style-type:none">
-        <li><a href="Index.html">Homepage</a></li>
+        <li><a href="index.html">Homepage</a></li>
         <li><a href="menu.html">Menu & Prices</a></li>
         <li><a href="events.html">Events & Activities</a></li>
       </ul>
@@ -64,3 +64,4 @@
 </div>
 </body>
 </html>
+
