--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
   <header> 
     <nav>
       <ul style="list-style-type:none">
-        <li><a href="Index.html">Homepage</a></li>
+        <li><a href="index.html">Homepage</a></li>
         <li><a href="menu.html">Menu & Prices</a></li>
         <li><a href="events.html">Events & Activities</a></li>
       </ul>
@@ -81,11 +81,12 @@
     <nav>
       <img src="Images/logo.png" alt="logo" width="50%" height="auto">
       <ul style="list-style-type:none">
-        <li><a href="Index.html">Homepage</a></li>
+        <li><a href="index.html">Homepage</a></li>
         <li><a href="menu.html">Menu & Prices</a></li>
         <li><a href="events.html">Events & Activities</a></li>
       </ul>
     </nav>
 </footer>
 </body>
+
 </html>
